# Eqx_Lib

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
Dependencies/: CMakeLists.txt
EquinoxHol/include/Equinox/: CMakeLists.txt  Equinox.hpp  Macros.hpp
EquinoxHol/include/Equinox/Client/: Client.hpp
EquinoxHol/include/Equinox/Math/: Core.hpp  Math.hpp  Modulator.hpp  Range.hpp  Trig.hpp
EquinoxHol/include/Equinox/Misc/: Misc.hpp
EquinoxHol/include/Equinox/Random/: Random.hpp
EquinoxHol/include/Equinox/Rectangle/: Rectangle.hpp
EquinoxHol/include/Equinox/Server/: Server.hpp
EquinoxMod/: CMakeLists.txt  Equinox.cpp
EquinoxMod/Client/: Client.cpp
EquinoxMod/Equinox/: CMakeLists.txt  Equinox.cpp  Math.cpp  Misc.cpp  Misc_Decl.cpp
EquinoxMod/Equinox/Client/: Client.cpp
EquinoxMod/Equinox/Decl/: Math_Decl.cpp  Misc_Decl.cpp
EquinoxMod/Equinox/Math/: Core.cpp  Core_Decl.cpp  Math.cpp  Modulator.cpp  Modulator_Decl.cpp  Range.cpp  Range_Decl.cpp  Trig.cpp  Trig_Decl.cpp
EquinoxMod/Equinox/Misc/: Misc.cpp
EquinoxMod/Equinox/Point/: Point.cpp  Point_Decl.cpp
EquinoxMod/Equinox/Random/: Random.cpp
EquinoxMod/Equinox/Rectangle/: Decl.cpp  Rectangle.cpp
EquinoxMod/Equinox/Server/: Server.cpp
EquinoxMod/Equinox/StopWatch/: Decl.cpp  StopWatch.cpp
EquinoxMod/Equinox/include/Equinox/: Macros.hpp
EquinoxMod/EquinoxHol/: CMakeLists.txt  Equinox.cpp
EquinoxMod/EquinoxHol/Client/: Client.cpp
EquinoxMod/EquinoxHol/Math/: Core.cpp  Modulator.cpp  Range.cpp  Trig.cpp
EquinoxMod/EquinoxHol/Misc/: Misc.cpp
EquinoxMod/EquinoxHol/Point/: Point.cpp
EquinoxMod/EquinoxHol/Random/: Random.cpp
EquinoxMod/EquinoxHol/Rectangle/: Rectangle.cpp
EquinoxMod/EquinoxHol/Server/: Server.cpp
EquinoxMod/EquinoxHol/include/Equinox/: Equinox.hpp  Macros.hpp
EquinoxMod/EquinoxHol/include/Equinox/Math/: Math.hpp  Trig.hpp
EquinoxMod/EquinoxHol/include/Equinox/Misc/: Misc.hpp
EquinoxMod/EquinoxHol/include/Equinox/Point/: Point.hpp
EquinoxMod/EquinoxHol/include/Equinox/Random/: Random.hpp
EquinoxMod/EquinoxHol/include/Equinox/StopWatch/: StopWatch.hpp
EquinoxMod/Math/: Core.cpp  Math.cpp  Modulator.cpp  Range.cpp  Trig.cpp
EquinoxMod/Misc/: Misc.cpp
EquinoxMod/Point/: Point.cpp
EquinoxMod/ProvingGrounds/: CMakeLists.txt  Main.cpp
EquinoxMod/ProvingGrounds/Tests/: CMakeLists.txt  Misc.cpp  Tests.cpp
EquinoxMod/ProvingGrounds/Tests/ClientServer/: ClientServer.cpp
EquinoxMod/ProvingGrounds/Tests/Math/: Core.cpp  Decl.cpp  Math.cpp  Modulator.cpp  Range.cpp  Trig.cpp
EquinoxMod/ProvingGrounds/Tests/Misc/: Core.cpp  Decl.cpp  Misc.cpp
EquinoxMod/ProvingGrounds/Tests/Point/: Core.cpp  Decl.cpp  Point.cpp
EquinoxMod/ProvingGrounds/Tests/Random/: Core.cpp  Random.cpp
EquinoxMod/ProvingGrounds/Tests/Rectangle/: Core.cpp  Decl.cpp  Rectangle.cpp
EquinoxMod/ProvingGrounds/Tests/StopWatch/: Decl.cpp  StopWatch.cpp
EquinoxMod/ProvingGrounds/UnitTester/: CMakeLists.txt  UnitTester.cpp  UnitTester_Decl.cpp
EquinoxMod/Random/: Random.cpp
EquinoxMod/Rectangle/: Rectangle.cpp
EquinoxMod/Server/: Server.cpp
EquinoxMod/Socket/: Socket.cpp
EquinoxMod/StopWatch/: StopWatch.cpp
EquinoxMod/Transmutator/: CMakeLists.txt  Main.cpp  Test.hpp  TestHol.cpp  holcml.txt
EquinoxMod/include/Eqx/Lib/: Macros.hpp
Lib/: CMakeLists.txt  Eqx_Lib.cpp
Lib/Math/: CMath.cpp  CT_Math.cpp  Math.cpp  OMath.cpp
Lib/Point/: Point.cpp
Lib/Poly/: Poly.cpp
Lib/Polygon/: Polygon.cpp
Lib/Timer/: Timer.cpp
Lib/include/Eqx/Lib/: CMakeLists.txt  Eqx_Lib.cpp
Lib/include/Eqx/Lib/Client/: Client.cpp
Lib/include/Eqx/Lib/Math/: Core.cpp
Lib/include/Eqx/Lib/Point/: Point.cpp
Lib/include/Eqx/Lib/Random/: Random.cpp
Lib/include/Eqx/Lib/Rectangle/: Rectangle.cpp
Lib/include/Eqx/Lib/Server/: Server.cpp
Lib/include/Eqx/Lib/Socket/: Socket.cpp
Lib/include/Eqx/Lib/StopWatch/: StopWatch.cpp
Lib/include/Eqx/Lib/include/Eqx/Lib/: Macros.hpp
ProvingGrounds/: CMakeLists.txt  Main.cpp
ProvingGrounds/Tests/: BenchmarkTester.hpp  CMakeLists.txt  ClientServerTester.hpp  Dependencies.hpp  FullTester.hpp  LogTester.hpp  MathematicsTester.hpp  MiscTester.hpp  PointTester.hpp  RandomTester.hpp  RectangleTester.hpp  StaticVectorTester.hpp  StopWatchTester.hpp  SuperEnumTester.hpp  UniqueResourceTester.hpp  UtilityMacrosTester.hpp
ProvingGrounds/Tests/ClientServer/: ClientServer.cpp
ProvingGrounds/Tests/Math/: Core.cpp  Math.cpp  Modulator.cpp  Range.cpp  Trig.cpp
ProvingGrounds/Tests/Misc/: Core.cpp  Misc.cpp
ProvingGrounds/Tests/Point/: Core.cpp  Point.cpp
ProvingGrounds/Tests/Random/: Random.cpp
ProvingGrounds/Tests/Rectangle/: Core.cpp  Rectangle.cpp
ProvingGrounds/Tests/StopWatch/: StopWatch.cpp
ProvingGrounds/Tests/details/: BenchmarkTesterDecl.hpp  BenchmarkTesterImpl.ipp  ClientServerTesterDecl.hpp  ClientServerTesterImpl.ipp  Dependencies.hpp  FullTesterDecl.hpp  FullTesterImpl.ipp  LogTesterDecl.hpp  LogTesterImpl.ipp  MathematicsTesterDecl.hpp  MathematicsTesterImpl.ipp  MiscTesterDecl.hpp  MiscTesterImpl.ipp  PointTesterDecl.hpp  PointTesterImpl.ipp  RandomTesterDecl.hpp  RandomTesterImpl.ipp  RectangleTesterDecl.hpp  RectangleTesterImpl.ipp  StaticVectorTesterDecl.hpp  StaticVectorTesterImpl.ipp  StopWatchTesterDecl.hpp  StopWatchTesterImpl.ipp  SuperEnumTesterDecl.hpp  SuperEnumTesterImpl.ipp  UniqueResourceTesterDecl.hpp  UniqueResourceTesterImpl.ipp  UtilityMacrosTesterDecl.hpp  UtilityMacrosTesterImpl.ipp
ProvingGrounds/UnitTester/: CMakeLists.txt  UnitTester.cpp  UnitTester.hpp
ProvingGrounds/UnitTester/details/: UnitTesterDecl.hpp  UnitTesterImpl.ipp
Tests/: CMakeLists.txt  Main.cpp  gtest.hpp  std.hpp
Tests/CT_Math/: CMakeLists.txt  Signbit.cmake  Signbit.cpp  Sqrt.cmake  Sqrt.cpp
Tests/Manual/: CMakeLists.txt  Main.cpp
Tests/Math/: Signbit.cpp
Tests/Point/: CMakeLists.txt  Point.cmake  Point.cpp  Test_Point.cpp
Tests/Polygon/: CMakeLists.txt  Polygon.cmake  Polygon.cpp
Tests/Timer/: CMakeLists.txt  Timer.cmake  Timer.cpp
Transmutator/: CMakeLists.txt  Main.cpp  TestHol.cpp
(+46 files in other folders)
